--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -4,7 +4,7 @@
   </button>
 
   <div class="table-responsive">
-    <table class="table" *ngIf="allSubscribers; else noSubscribers">
+    <table class="table table-hover" *ngIf="allSubscribers; else noSubscribers">
       <thead>
         <tr>
           <th scope="col">First Name</th>
