--- a/src/app/pages/pricing-plan/pricing-plan.component.html
+++ b/src/app/pages/pricing-plan/pricing-plan.component.html
@@ -1,6 +1,6 @@
 <div class="container my-3">
   <div class="table-responsive">
-    <table class="table" *ngIf="pricingPlans; else noPlans">
+    <table class="table table-hover" *ngIf="pricingPlans; else noPlans">
       <thead>
         <tr>
           <th scope="col">Type</th>
@@ -95,6 +95,7 @@
                         type="submit"
                         class="btn btn-primary"
                         data-bs-dismiss="modal"
+                        [disabled]="updateForm.status === 'INVALID'"
                       >
                         Update
                       </button>
