--- a/src/app/pages/subscription/new/new.component.html
+++ b/src/app/pages/subscription/new/new.component.html
@@ -46,7 +46,13 @@
       </mat-autocomplete>
     </mat-form-field>
     <div class="modal-footer">
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="addSub.status === 'INVALID'"
+      >
+        Create
+      </button>
     </div>
   </form>
 </div>
