--- a/src/app/pages/subscription/single-sub/single-sub.component.html
+++ b/src/app/pages/subscription/single-sub/single-sub.component.html
@@ -8,12 +8,12 @@
     </h1>
 
     <div class="row my-5 align-items-center">
-      <!-- <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <h3>Subscriber Id</h3>
         <p>
           {{ subscription.subscriberId }}
         </p>
-      </div> -->
+      </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <h3>Price</h3>
         <p>
