--- a/src/app/pages/pricing-plan/single-plan/single-plan.component.html
+++ b/src/app/pages/pricing-plan/single-plan/single-plan.component.html
@@ -4,10 +4,30 @@
       <button class="btn btn-secondary" routerLink="../">Go Back</button>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <h1 class="border-bottom border-dark mb-5 mt-4">
-        {{ pricingPlan.type | uppercase }}
-      </h1>
+    <div class="row align-items-center">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="d-flex justify-content-center">
+          <h1
+            class="border-bottom border-dark mb-5 mb-sm-5 mb-md-5 md-lg-5 mt-4"
+          >
+            {{ pricingPlan.type | uppercase }}
+          </h1>
+        </div>
+      </div>
+
+      <ng-container *ngIf="!editMode">
+        <div class="col-lg-6 col-md-6 col-sm-6 mb-5 mb-sm-0 mb-md-0 mb-lg-0">
+          <div class="d-flex justify-content-center">
+            <button
+              type="button"
+              (click)="editMode = true; fillModal()"
+              class="btn btn-info"
+            >
+              Update
+            </button>
+          </div>
+        </div>
+      </ng-container>
     </div>
 
     <div class="row">
@@ -39,75 +59,66 @@
         </div>
       </div>
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-        <div class="d-flex flex-column">
-          <div class="d-flex justify-content-center">
-            <button
-              type="button"
-              (click)="editMode = true; fillModal()"
-              class="btn btn-warning"
-              *ngIf="!editMode"
+      <ng-container *ngIf="editMode">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="d-flex flex-column">
+            <form
+              [formGroup]="updateForm"
+              class="d-flex flex-row justify-content-around flex-wrap"
+              (ngSubmit)="update(); editMode = false"
             >
-              Update
-            </button>
+              <div>
+                <div class="mb-3">
+                  <label for="hourlyPricing" class="form-label"
+                    >Hourly Pricing</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    formControlName="hourlyPricing"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="dailyPricing" class="form-label"
+                    >Daily Pricing</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    formControlName="dailyPricing"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="minimumHours" class="form-label"
+                    >Minimum Hours</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    formControlName="minimumHours"
+                  />
+                </div>
+                <div class="mb-3 d-flex justify-content-evenly">
+                  <button
+                    class="btn btn-secondary"
+                    type="button"
+                    (click)="editMode = false"
+                  >
+                    Close
+                  </button>
+                  <button
+                    type="submit"
+                    class="btn btn-success"
+                    [disabled]="updateForm.status === 'INVALID'"
+                  >
+                    Update
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
-          <form
-            *ngIf="editMode"
-            [formGroup]="updateForm"
-            class="d-flex flex-row justify-content-around flex-wrap"
-            (ngSubmit)="update(); editMode = false"
-          >
-            <div>
-              <div class="mb-3">
-                <label for="hourlyPricing" class="form-label"
-                  >Hourly Pricing</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  formControlName="hourlyPricing"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="dailyPricing" class="form-label"
-                  >Daily Pricing</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  formControlName="dailyPricing"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="minimumHours" class="form-label"
-                  >Minimum Hours</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  formControlName="minimumHours"
-                />
-              </div>
-              <div class="mb-3 d-flex justify-content-evenly">
-                <button
-                  class="btn btn-secondary"
-                  type="button"
-                  (click)="editMode = false"
-                >
-                  Close
-                </button>
-                <button
-                  type="submit"
-                  class="btn btn-success"
-                  [disabled]="updateForm.status === 'INVALID'"
-                >
-                  Update
-                </button>
-              </div>
-            </div>
-          </form>
         </div>
-      </div>
+      </ng-container>
     </div>
   </div>
 </ng-container>
