--- a/src/app/pages/pricing-plan/pricing-plan.component.html
+++ b/src/app/pages/pricing-plan/pricing-plan.component.html
@@ -28,3 +28,11 @@
 </div>
 
 <ng-template #noPlans>No Plans Currently</ng-template>
+
+<div
+  class="alert alert-danger my-5 position-fixed top-0 start-0"
+  role="alert"
+  *ngIf="isDangerShown"
+>
+  {{ errorMessage }}
+</div>
