--- a/src/app/pages/subscription/new/new.component.html
+++ b/src/app/pages/subscription/new/new.component.html
@@ -1,5 +1,5 @@
 <div class="p-3 text-center">
-  <h1 class="text-body-emphasis mb-5">Create Subscriber</h1>
+  <h1 class="text-body-emphasis mb-5">Create Subscription</h1>
 
   <div class="container col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
     <form [formGroup]="addSub" (ngSubmit)="createSubscription()">
@@ -51,4 +51,12 @@
       </div>
     </form>
   </div>
+</div>
+
+<div
+  class="alert alert-danger my-5 position-fixed top-0 start-0"
+  role="alert"
+  *ngIf="isDangerShown"
+>
+  {{ errorMessage }}
 </div>
